fix: use event slug for correct Polymarket URLs
- fetch.js: use m.events[0].slug as the event slug for URL
- builds correct URLs: https://polymarket.com/event/{event-slug}
- was using market slug before, which gave 404
- example: who-will-trump-nominate-as-fed-chair (correct) instead of will-trump-nominate-judy-shelton...

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
     }
     
     function buildUrl(market) {
-      // Priorizar slug, senão usar ID
-      if (market.slug) return `https://polymarket.com/market/${market.slug}`;
+      // Usar o event slug (já está no campo slug após o fix no fetch.js)
+      if (market.slug) return `https://polymarket.com/event/${market.slug}`;
       if (market.id) return `https://polymarket.com/market/${market.id}`;
       return '#';
     }
